# NeuroSync

./: .gitignore  README.md  mock-server.js  package-lock.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/backend/: .env.example  lesson_stub.json
config/backend/backups/: classifier-20260308-134036.joblib
docs/: DIVISION_OF_LABOR.md
docs/plans/: 2026-03-08-eeg-training-gui.md  2026-03-08-neurosync-integration-ui-revamp.md
examples/: mock_server.py  ws-monitor.html
frontend/: .gitignore  mock_server.py  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdaptionLog.tsx  CognitiveStateIndicator.tsx  ConversationTranscript.tsx  (+4 more)
scripts/backend/: bootstrap.sh  mock.sh  start.sh  stream.sh
scripts/training/: README_TRAINING.txt  collect.py  train.py  train_gui.py
src/backend/: .env.example  pyproject.toml
src/backend/agents/: lock.py  planner.py  speaker.py  summarizer.py
src/backend/api/: __init__.py  main.py  models.py  routes.py  websocket.py
src/backend/eeg/: __init__.py  classifier.py  filter.py  ingestion.py  processor.py  watchdog.py
src/backend/session/: __init__.py  events.py  store.py  tracker.py
src/backend/voice/: tts.py  vad.py
tests/backend/: conftest.py  test_api.py  test_classifier_pretrained.py  test_eeg_confidence_gate.py  test_eeg_processing.py  test_pending_strategy.py  test_session.py  test_summarizer.py  test_train_features.py  test_vad.py
(+14 files in other folders)
