[project]
name = "neurosync-backend"
version = "0.1.0"
description = "NeuroSync neuroadaptive AI tutoring backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pylsl>=1.16.2",
    "muselsl>=2.3.1",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "openai>=1.40.0",
    "websockets>=13.0",
    "scikit-learn>=1.4",
    "joblib>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../../tests/backend"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eeg", "session", "api"]
